0.98_05
    Doc Changes
    * Add a shorter work around for the UTF-8 output problem.
      (Michael G Schwern)

    New Features
    * A subtest will put its name at the front of its results to make
      subtests easier to read. [github #290] [github #364]
      (Brendan Byrd)


0.98_04  Sun Apr 14 10:54:13 BST 2013
    Distribution Changes
    * Scalar::Util 1.13 (ships with Perl 5.8.1) is now required.
      (Michael G Schwern)

    Feature Changes
    * The default name and diagnostics for isa_ok() and new_ok() have
      changed. (Michael G Schwern)

    Docs Fixes
    * Added a COMPATIBILITY section so users know what major features were
      added with what version of Test::More or perl. [github 343] [github 344]
      (pdl)
    * Fix the ok() example with grep(). (derek.mead@gmail.com)

    Bug Fixes
    * A test with no plan and missing done_testing() now exits with non-zero.
      [github #341] (tokuhirom)
    * isa_ok() tests were broken in 5.17 because of a change in
      method resolution. [github #353] (Michael G Schwern)


0.98_03  Thu Jun 21 13:04:19 PDT 2012
    New Features
    * cmp_ok() will error when used with something which is not a
      comparison operator, including =, += and the like.
      [github 141] (Matthew Horsfall)

    Bug Fixes
    * use_ok() was calling class->import without quoting which could
      cause problems if "class" is also a function.

    Doc Fixes
    * use_ok() has been discouraged and de-emphasized as a general
      replacement for `use` in tests. [github #288]
    * $thing is now $this in the docs to avoid confusing users of
      other languages. [Karen Etheridge]

    Incompatible Changes With Previous Alphas (0.98_01)
    * use_ok() will no longer apply lexical pragams.  The incompatibilities
      and extra complexity is not worth the marginal use.
      [github #287]


0.98_02  Thu Nov 24 01:13:53 PST 2011
    Bug Fixes
    * use_ok() in 0.98_01 was leaking pragmas from inside Test::More.